feat: Added capability to stream via Chunked Transfer encoding.
- Added getter and setters (chunkSize() and withChunkSize()) for default size per chunk
- Changed maxBodySize from int to long to align with HTTP's spec
- Added method to check the sending method of client/sender
- Make sure calling body() family method only throws Levtus' internall exceptions
- Added chunked reading capability in LevtusInputStream and made sure Request is compatible
- Made it so LevtusIOException extends DeveloperException
- Added needed test

Note: Skipped trailer support for transfer encoding, as it is rarely used and doesn't align with Levtus' microservice needs